<?xml version="1.0"?>
<package format="3">
  <name>moveit_resources_fanuc_moveit_config</name>
  <version>3.0.0</version>
  <description>
    <p>
      MoveIt Resources for testing: Fanuc M-10iA.
    </p>
    <p>
      A project-internal configuration for testing in MoveIt.
    </p>
  </description>
  <author email="dave@dav.ee">Dave Coleman</author>
  <maintainer email="dave@dav.ee">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit_resources/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit_resources</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Disabled to avoid circular dependencies with MoveIt packages
       depending on moveit_resources for testing -->
  <!--
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_fake_controller_manager</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_setup_assistant</exec_depend>
  -->
  <exec_depend>ros2cli_common_extensions</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>xacro</exec_depend>
  <!-- This package is referenced in the warehouse launch files, but does not build out of the box at the moment.
       Commented the dependency until this works. -->
  <!-- <exec_depend>warehouse_ros_mongo</exec_depend> -->
  <exec_depend>moveit_resources_fanuc_description</exec_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
