<?xml version="1.0"?>
<package format="3">
  <name>moveit_resources</name>
  <version>3.0.0</version>
  <description>Resources used for MoveIt testing</description>

  <author email="isucan@willowgarage.edu">Ioan Sucan</author>
  <author email="acorn@willowgarage.edu">Acorn Pooley</author>

  <maintainer email="moveit_releasers@googlegroups.com">MoveIt Release Team</maintainer>

  <license>BSD</license>
  <url type="website">http://moveit.ros.org</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit-resources/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit-resources</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>moveit_resources_fanuc_description</exec_depend>
  <exec_depend>moveit_resources_fanuc_moveit_config</exec_depend>

  <exec_depend>moveit_resources_panda_description</exec_depend>
  <exec_depend>moveit_resources_panda_moveit_config</exec_depend>

  <exec_depend>moveit_resources_pr2_description</exec_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
