<package>
  <name>moveit_resources_panda_moveit_config</name>
  <version>0.7.1</version>
  <description>
    <p>
      MoveIt Resources for testing: Franka Emika Panda
    </p>
    <p>
		A project-internal configuration for testing in MoveIt.
    </p>
  </description>
  <author email="mike@picknik.ai">Mike Lautman</author>
  <maintainer email="mike@picknik.ai">Mike Lautman</maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org/</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit_resources/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit_resources</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>moveit_resources_panda_description</run_depend>
  <!-- disabled to remove circular dependencies
  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>moveit_fake_controller_manager</run_depend>
  <run_depend>moveit_kinematics</run_depend>
  <run_depend>moveit_planners_ompl</run_depend>
  <run_depend>moveit_ros_visualization</run_depend>
  -->
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>joint_state_publisher_gui</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>topic_tools</run_depend>
  <!-- This package is referenced in the warehouse launch files, but does not build out of the box at the moment.
       Commented the dependency until this works. -->
  <!-- <run_depend>warehouse_ros_mongo</run_depend> -->
</package>
